add jualan dan transaksi
