# controller/Account/ownerotlet/suplier/addSuplier.go
@@ -1,22 +1,27 @@
 package suplier
 
 import (
-	"encoding/json"
 	"github.com/jinzhu/gorm"
 	"hara-depo-proj/model/mobile"
 	"hara-depo-proj/util"
-	"io/ioutil"
 	"net/http"
 )
 
-func AddSuplier(db1 *gorm.DB, db2 *gorm.DB, w http.ResponseWriter, r *http.Request) {
+func AddSuplier(db1 *gorm.DB, w http.ResponseWriter, r *http.Request) {
 
 	suplier := mobile.Suplier{}
 
-	body, err1 := ioutil.ReadAll(r.Body)
+	KodeUser := r.FormValue("KodeUser")
+	NamaSuplier := r.FormValue("NamaSuplier")
+	NoHp := r.FormValue("Hp")
+	Email := r.FormValue("Email")
+	Alamat := r.FormValue("Alamat")
 
-	err1 = json.Unmarshal(body, &suplier)
-	_ = err1
+	suplier.Nama = NamaSuplier
+	suplier.KodeUser = KodeUser
+	suplier.NoTlp = NoHp
+	suplier.Email = Email
+	suplier.Alamat = Alamat
 
 	defer r.Body.Close()
 
@@ -24,5 +29,7 @@ func AddSuplier(db1 *gorm.DB, db2 *gorm.DB, w http.ResponseWriter, r *http.Reque
 		util.RespondError(w, http.StatusInternalServerError, err.Error())
 		return
 	}
+
+	util.RespondJSON(w, 202, suplier)
 
 }
